--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,19 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Página Inicial";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="page-content">
+    <h2>Converter Arquivo para PDF</h2>
+    <br />
+
+    <form action="/Home/ConvertToPdf" method="post" enctype="multipart/form-data">
+        <div>
+            <label for="file"><h5>Escolha um arquivo (TXT ou HTML):</h5></label>
+            <input type="file" id="file" name="file" accept=".txt,.html" required />
+        </div>
+        <br />
+        <div>
+            <button type="submit" class="btn">Converter para PDF</button>
+        </div>
+    </form>
 </div>
