feat: cria paginas login, editor e historico/adiciona biblioteca v1

--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -2,13 +2,13 @@
     <nav class="navbar">
         <ul class="navbar-list">
             <li class="navbar-item">
-                <a href="#home" class="navbar-link">Home</a>
+                <NavLink href="/" class="navbar-link" activeClass="active">Home</NavLink>
             </li>
             <li class="navbar-item">
-                <a href="#editor" class="navbar-link">Editor de HTML</a>
+                <NavLink href="/editor" class="navbar-link" activeClass="active">Editor de HTML</NavLink>
             </li>
             <li class="navbar-item">
-                <a href="#historico" class="navbar-link">Histórico</a>
+                <NavLink href="/historico" class="navbar-link" activeClass="active">Histórico</NavLink>
             </li>
         </ul>
     </nav>
