--- a/Components/Routes.razor
+++ b/Components/Routes.razor
@@ -1,6 +1,21 @@
-﻿<Router AppAssembly="typeof(Program).Assembly">
+﻿@using Microsoft.AspNetCore.Components.Routing
+@using AmbienteDeTestesHTML2PDF.Components.Pages
+
+<Router AppAssembly="typeof(Program).Assembly">
     <Found Context="routeData">
-        <RouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)" />
+        @if (routeData.PageType == typeof(Login))
+        {
+            <RouteView RouteData="routeData" DefaultLayout="null" /> <!-- Sem layout -->
+        }
+        else
+        {
+            <RouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)" /> <!-- Layout padrão -->
+        }
         <FocusOnNavigate RouteData="routeData" Selector="h1" />
     </Found>
+    <NotFound>
+        <LayoutView Layout="typeof(Layout.MainLayout)">
+            <p>Desculpe, não conseguimos encontrar essa página.</p>
+        </LayoutView>
+    </NotFound>
 </Router>
