feat: inclusao da terceira versao da biblioteca

--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -2,7 +2,7 @@
     <nav class="navbar">
         <ul class="navbar-list">
             <li class="navbar-item">
-                <NavLink href="/" class="navbar-link" activeClass="active">Home</NavLink>
+                <NavLink href="/home" class="navbar-link" activeClass="active">Home</NavLink>
             </li>
             <li class="navbar-item">
                 <NavLink href="/editor" class="navbar-link" activeClass="active">Editor de HTML</NavLink>
